04-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-service
  template:
    metadata:
      labels:
        app: redis-service
    spec:
      containers:
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis-service
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
