ui-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: medical-ui
spec:
  ports:
  - port: 80
  selector:
    app: medical-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medical-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medical-ui
  template:
    metadata:
      labels:
        app: medical-ui
    spec:
      containers:
      - name: ui
        image: local/medical-ui:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 80
