02-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mesh-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mesh-ui
  template:
    metadata:
      labels:
        app: mesh-ui
    spec:
      containers:
      - name: mesh-ui
        image: local/clinical-mesh-ui:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mesh-ui
spec:
  selector:
    app: mesh-ui
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mesh-ui-routing
spec:
  hosts:
  - "*"
  gateways:
  - mesh-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: frontend-agent
        port:
          number: 8080
  - route:
    - destination:
        host: mesh-ui
        port:
          number: 80
